--- a/app/src/main/res/layout/content_custom_field_details_edit.xml
+++ b/app/src/main/res/layout/content_custom_field_details_edit.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<!--// TODO improve view when keymoard is openned -->
+
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -8,31 +10,32 @@
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/dp_16">
 
-<!--    <TextView-->
-<!--        android:id="@+id/tvCustomFieldDescription"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:textAppearance="?android:attr/textAppearanceMedium"-->
-<!--        android:textStyle="bold"-->
-<!--        android:gravity="center"-->
-<!--        android:layout_marginBottom="@dimen/dp_10"/>-->
+    <TextView
+        android:id="@+id/tvActionDescription"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:layout_marginBottom="@dimen/dp_10"/>
+
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvCustomFieldDetails"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-        android:layout_above="@id/btnAddRecord"
+        android:layout_above="@+id/btnSendChanges"
+        android:layout_below="@id/tvActionDescription"
         android:layout_marginBottom="@dimen/dp_16"
-        tools:context=".activities.ProductsActivity"
-        tools:listitem="@layout/item_custom_field_detail"
-        android:scrollbars="vertical"/>
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+        tools:itemCount="2"
+        tools:listitem="@layout/item_custom_field_edit"/>
 
     <Button
-        android:id="@+id/btnAddRecord"
+        android:id="@+id/btnSendChanges"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/add_record"
+        android:text="@string/send_data_caps"
         android:padding="@dimen/dp_10"
         android:background="@drawable/rounded_button_indigo"
         android:layout_alignParentBottom="true"/>
