--- a/app/src/main/res/layout/content_assignment_actions.xml
+++ b/app/src/main/res/layout/content_assignment_actions.xml
@@ -531,6 +531,21 @@
             android:background="@drawable/rounded_layout_grey"
             android:gravity="center" />
 
+        <Button
+            android:id="@+id/btnPreviewReport"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_16"
+            android:text="@string/preview_report"
+            android:textColor="@color/grey_800"
+            android:textSize="@dimen/sp_12"
+            android:paddingTop="@dimen/dp_1"
+            android:paddingBottom="@dimen/dp_1"
+            android:paddingLeft="@dimen/dp_1"
+            android:paddingRight="@dimen/dp_1"
+            android:background="@drawable/rounded_button_amber"
+            android:drawableEnd="@drawable/ic_chevron_right_teal_24dp"
+            android:drawableRight="@drawable/ic_chevron_right_teal_24dp" />
 
     </LinearLayout>
 
