--- a/app/src/main/res/layout/item_custom_field_detail.xml
+++ b/app/src/main/res/layout/item_custom_field_detail.xml
@@ -14,10 +14,10 @@
     android:baselineAligned="false">
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical">
+
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tvCustomFieldDetailsString"
@@ -26,8 +26,17 @@
             android:padding="@dimen/dp_2"
             android:textSize="@dimen/sp_16"
             android:textStyle="bold"
+            android:autoLink="web"
+            android:layout_weight="1"
             android:layout_gravity="center_vertical"/>
 
+        <TextView
+            android:id="@+id/tvEditCustomFieldDetails"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="end"
+            android:layout_gravity="center_vertical"
+            android:background="@drawable/ic_chevron_right_blue_24dp"/>
 
     </LinearLayout>
 
