--- a/app/src/main/res/layout/content_assignment_details.xml
+++ b/app/src/main/res/layout/content_assignment_details.xml
@@ -16,10 +16,10 @@
             android:id="@+id/assignment_detail_container"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="7"
             android:layout_marginBottom="@dimen/dp_10"
-            android:padding="@dimen/dp_6"
-            android:background="@drawable/rounded_layout_blue">
+            android:layout_weight="7"
+            android:background="@drawable/rounded_layout_blue"
+            android:padding="@dimen/dp_6">
 
             <include layout="@layout/sub_content_assignment_detail" />
 
