--- a/app/src/main/res/layout/content_assignment_actions.xml
+++ b/app/src/main/res/layout/content_assignment_actions.xml
@@ -4,6 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/ScrollView1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:scrollbars="none">
@@ -35,7 +36,10 @@
             android:autoLink="web"
             android:linksClickable="true"
             android:textStyle="bold"
+            android:scrollbars="vertical"
+            android:maxLines="6"
             android:textColor="@color/grey_600" />
+
 
         <EditText
             android:enabled="false"
