--- a/app/src/main/res/layout/content_new_assignment.xml
+++ b/app/src/main/res/layout/content_new_assignment.xml
@@ -77,6 +77,26 @@
             android:textSize="@dimen/sp_16"
             android:textColor="@color/grey_900"/>
 
+        <TextView
+            android:id="@+id/tvNewAssignmentStatus"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="@dimen/dp_10"
+            android:paddingBottom="@dimen/dp_10"
+            android:text="@string/select_status"
+            android:textSize="@dimen/sp_16"
+            android:textColor="@color/grey_900"/>
+
+        <TextView
+            android:id="@+id/tvNewAssignmentIndicator"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="@dimen/dp_10"
+            android:paddingBottom="@dimen/dp_10"
+            android:text="@string/select_assignment_indicator"
+            android:textSize="@dimen/sp_16"
+            android:textColor="@color/grey_900"/>
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/tilNewAssignmentProblem"
             android:layout_width="match_parent"
