--- a/app/src/main/res/layout/content_assignment_products.xml
+++ b/app/src/main/res/layout/content_assignment_products.xml
@@ -76,4 +76,14 @@
         android:text="@string/add_new_product"
         android:background="@drawable/rounded_button_indigo" />
 
+    <Button
+        android:visibility="gone"
+        android:id="@+id/btnAddExistingProduct"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/dp_10"
+        android:padding="@dimen/dp_10"
+        android:text="@string/select_existing"
+        android:background="@drawable/rounded_button_indigo" />
+
 </LinearLayout>
