--- a/app/src/main/res/layout/item_name_chevron.xml
+++ b/app/src/main/res/layout/item_name_chevron.xml
@@ -42,6 +42,15 @@
 
     </LinearLayout>
 
+    <CheckBox
+        android:visibility="gone"
+        android:id="@+id/chkSelectToAdd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="end"
+        android:layout_gravity="center_vertical"
+        />
+
     <TextView
         android:id="@+id/tvChevron"
         android:layout_width="wrap_content"
