--- a/app/src/main/res/layout/content_added_consumables.xml
+++ b/app/src/main/res/layout/content_added_consumables.xml
@@ -51,4 +51,14 @@
         android:text="@string/add_new_consumable_caps"
         android:background="@drawable/rounded_button_indigo"/>
 
+    <Button
+        android:visibility="gone"
+        android:id="@+id/btnAddFromPicking"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/dp_10"
+        android:padding="@dimen/dp_10"
+        android:text="@string/select_from_picking"
+        android:background="@drawable/rounded_button_indigo"/>
+
 </LinearLayout>
