--- a/app/src/main/res/layout/item_all_consumables.xml
+++ b/app/src/main/res/layout/item_all_consumables.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/llItemsRvNameChevron"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:background="@drawable/rounded_layout_purple"
     android:layout_marginTop="@dimen/dp_8"
     android:layout_marginBottom="@dimen/dp_2"
@@ -13,6 +13,13 @@
     android:layout_marginRight="@dimen/dp_10"
     android:padding="@dimen/dp_8"
     android:baselineAligned="false">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingLeft="@dimen/dp_6"
+        android:paddingRight="@dimen/dp_6">
 
     <TextView
         android:id="@+id/tvConsumableName"
@@ -25,10 +32,81 @@
         android:layout_weight="1"/>
 
     <TextView
+        android:id="@+id/tvChevronConsumable"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="end"
         android:layout_gravity="center_vertical"
         android:background="@drawable/ic_chevron_right_purple_24dp"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:visibility="visible"
+        android:id="@+id/llpickingListValues"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingLeft="@dimen/dp_6"
+        android:paddingRight="@dimen/dp_6">
+
+
+        <TextView
+            android:id="@+id/tvAddedPickingNotes"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:textSize="@dimen/sp_14"
+            android:textAlignment="textEnd"
+            android:text = "@string/notes_gr"
+            android:layout_gravity="center_vertical"
+            tools:ignore="RtlCompat" />
+
+        <EditText
+            android:id="@+id/etAddedPickingNotes"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="6"
+            android:paddingTop="0dp"
+            android:textSize="@dimen/sp_14"
+            android:hint="@string/input_value"
+            android:textColorHint="@color/grey_400"
+            android:inputType="text|textMultiLine"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:visibility="visible"
+        android:id="@+id/llMandatoryMeasurable"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingLeft="@dimen/dp_6"
+        android:paddingRight="@dimen/dp_6">
+
+
+        <TextView
+            android:id="@+id/tvQTY"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:textSize="@dimen/sp_14"
+            android:textAlignment="textEnd"
+            android:text = "@string/quantity"
+            android:layout_gravity="center_vertical"
+            tools:ignore="RtlCompat" />
+
+        <EditText
+            android:id="@+id/etPickingQty"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingTop="0dp"
+            android:textSize="@dimen/sp_14"
+            android:hint="@string/input_value"
+            android:inputType="numberDecimal"
+            android:textColorHint="@color/grey_400"/>
+
+    </LinearLayout>
 
 </LinearLayout>
+
