--- a/app/src/main/res/layout/content_assignment_products.xml
+++ b/app/src/main/res/layout/content_assignment_products.xml
@@ -57,6 +57,10 @@
 
     </androidx.cardview.widget.CardView>
 
+
+
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvAssignmentProducts"
         android:layout_width="match_parent"
@@ -66,6 +70,46 @@
         android:scrollbars="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/item_name_chevron"/>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/crdvZones"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_8"
+        android:layout_marginLeft="@dimen/dp_10"
+        android:layout_marginRight="@dimen/dp_10"
+        app:cardBackgroundColor="@color/light_blue_100"
+        app:cardCornerRadius="4dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tvSelectZone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="@dimen/dp_2"
+                android:paddingBottom="@dimen/dp_2"
+                android:paddingLeft="@dimen/dp_10"
+                android:paddingRight="@dimen/dp_10"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="@string/select_zone"
+                android:layout_gravity="center_vertical" />
+
+            <Spinner
+                android:id="@+id/spZones"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_2"
+                android:layout_marginRight="@dimen/dp_2"
+                android:layout_gravity="center_vertical|end" />
+
+        </LinearLayout>
+
+
+    </androidx.cardview.widget.CardView>
 
     <Button
         android:id="@+id/btnAddNewProduct"
