--- a/app/src/main/res/layout/item_name_chevron.xml
+++ b/app/src/main/res/layout/item_name_chevron.xml
@@ -14,11 +14,21 @@
     android:padding="@dimen/dp_12"
     android:baselineAligned="false">
 
+    <TextView
+        android:id="@+id/tvExpand"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="end"
+        android:layout_gravity="center_vertical"
+        android:background="@drawable/ic_expand"/>
+
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="vertical">
+
 
     <TextView
         android:id="@+id/tvItemName"
