--- a/app/src/main/res/layout/content_assignment_actions.xml
+++ b/app/src/main/res/layout/content_assignment_actions.xml
@@ -359,6 +359,22 @@
             android:drawableEnd="@drawable/ic_chevron_right_teal_24dp"
             android:drawableRight="@drawable/ic_chevron_right_teal_24dp" />
 
+        <Button
+            android:id="@+id/btnCustomFields"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_16"
+            android:text="@string/custom_fields"
+            android:textColor="@color/grey_800"
+            android:textSize="@dimen/sp_12"
+            android:paddingTop="@dimen/dp_10"
+            android:paddingBottom="@dimen/dp_10"
+            android:paddingLeft="@dimen/dp_1"
+            android:paddingRight="@dimen/dp_1"
+            android:background="@drawable/rounded_button_teal_light"
+            android:drawableEnd="@drawable/ic_chevron_right_teal_24dp"
+            android:drawableRight="@drawable/ic_chevron_right_teal_24dp" />
+
         <TextView
             android:id="@+id/tvMandatoryTasksTitle"
             android:layout_width="match_parent"
