--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -12,6 +12,54 @@
     android:background="@drawable/rounded_layout_blue" >
 
     <LinearLayout
+        android:id="@+id/llCheckInOut"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="@dimen/dp_16"
+        android:layout_marginLeft="@dimen/dp_16"
+        android:layout_marginRight="@dimen/dp_16"
+        android:visibility="gone"
+        style="?android:attr/buttonBarStyle">
+
+        <Button
+            android:enabled="false"
+            android:id="@+id/btnCheckIn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="@dimen/dp_6"
+            android:layout_marginEnd="@dimen/dp_10"
+            android:layout_marginRight="@dimen/dp_10"
+            android:background="@drawable/btn_blue_rounded"
+            android:text="@string/check_in"
+            android:textColor="@color/grey_800"
+            android:layout_gravity="center_vertical"
+            android:drawableStart="@drawable/ic_directions_walk_blue_24dp"
+            android:drawableLeft="@drawable/ic_directions_walk_blue_24dp"
+            android:drawablePadding="@dimen/dp_2"
+            style="?android:attr/buttonBarButtonStyle"/>
+
+        <Button
+            android:enabled="false"
+            android:id="@+id/btnCheckOut"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="@dimen/dp_6"
+            android:text="@string/check_out"
+            android:textColor="@color/grey_800"
+            android:layout_gravity="center_vertical"
+            android:drawableEnd="@drawable/ic_directions_run_blue_24dp"
+            android:drawableRight="@drawable/ic_directions_run_blue_24dp"
+            android:drawablePadding="@dimen/dp_2"
+            android:background="@drawable/btn_blue_rounded"
+            tools:ignore="RelativeOverlap"
+            style="?android:attr/buttonBarButtonStyle"/>
+
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
