--- a/app/src/main/res/layout/content_assignment_products.xml
+++ b/app/src/main/res/layout/content_assignment_products.xml
@@ -29,6 +29,7 @@
         app:cardCornerRadius="4dp">
 
         <LinearLayout
+            android:id="@+id/llTypeSpinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
