--- a/app/src/main/res/layout/sub_content_assignment_detail.xml
+++ b/app/src/main/res/layout/sub_content_assignment_detail.xml
@@ -144,6 +144,19 @@
         android:drawablePadding="@dimen/dp_6" />
 
     <TextView
+        android:id="@+id/tvCustomerBusinessTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/dp_2"
+        android:gravity="center_vertical"
+        android:textStyle="bold"
+        android:textColor="@color/grey_800"
+        android:textSize="@dimen/sp_14"
+        android:drawableStart="@drawable/ic_revenue_vat_24dp"
+        android:drawableLeft="@drawable/ic_revenue_vat_24dp"
+        android:drawablePadding="@dimen/dp_6" />
+
+    <TextView
         android:id="@+id/tvCustomerVatNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
