--- a/app/src/main/res/layout/content_det_children.xml
+++ b/app/src/main/res/layout/content_det_children.xml
@@ -8,6 +8,17 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <Button
+        android:id="@+id/btnShowHide"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_32"
+        android:text="@string/show_hide_all"
+        android:padding="@dimen/dp_1"
+        android:layout_margin="@dimen/dp_4"
+        android:background="@drawable/rounded_button_indigo"
+        android:layout_alignParentBottom="true"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvDetChildren"
         android:layout_width="match_parent"
