--- a/app/src/main/res/layout/items_name_checkboxes.xml
+++ b/app/src/main/res/layout/items_name_checkboxes.xml
@@ -43,4 +43,34 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/llServiceQuanity"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="@dimen/dp_2" >
+
+        <TextView
+            android:id="@+id/tvQuantity"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/dp_2"
+            android:textSize="@dimen/sp_16"
+            android:textStyle="bold"
+            android:text="@string/quantity"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"/>
+
+        <EditText
+            android:id="@+id/etServiceQuantity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/dp_6"
+            android:gravity="top"
+            android:inputType="numberDecimal"
+            android:layout_weight="2"/>
+
+    </LinearLayout>
+
 </LinearLayout>
