--- a/app/src/main/res/layout/item_assignment.xml
+++ b/app/src/main/res/layout/item_assignment.xml
@@ -152,6 +152,26 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/tvIndicators"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/dp_2"
+                android:gravity="center_vertical"
+                android:textColor="@color/black"
+                android:textAppearance="?attr/textAppearanceListItem"
+                android:drawableStart="@drawable/baseline_label_important_24"
+                android:drawableLeft="@drawable/baseline_label_important_24"
+                android:drawablePadding="@dimen/dp_6" />
+
+
+        </LinearLayout>
+
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
