--- a/app/src/main/res/layout/items_list_content.xml
+++ b/app/src/main/res/layout/items_list_content.xml
@@ -64,6 +64,7 @@
             />
 
         <Button
+            android:visibility="gone"
             android:id="@+id/btnServiceFromPicking"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
