--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -25,7 +25,7 @@
             android:layout_marginTop="@dimen/dp_32"
             android:layout_marginBottom="@dimen/dp_48"
             android:layout_gravity="center"
-            android:src="@drawable/logo_full"
+            android:src="@mipmap/ic_login_logo_foreground"
             android:contentDescription="@string/logo"/>
 
         <EditText
